<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <me.hg.ilnaz.bankapp.DoubleTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/title_bank_name"
                    />


                <me.hg.ilnaz.bankapp.DoubleTextView
                    android:id="@+id/bic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/title_bank_bic"
                    />

                <me.hg.ilnaz.bankapp.DoubleTextView
                    android:id="@+id/ks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/title_bank_ks"
                    />

                <me.hg.ilnaz.bankapp.DoubleTextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/title_bank_city"
                    />

                <me.hg.ilnaz.bankapp.DoubleTextView
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/title_bank_tel"
                     />

                <me.hg.ilnaz.bankapp.DoubleTextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/title_bank_address"
                    />

            </LinearLayout>

        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>